src/test/parse-fail/issue-39018.stderr
error[E0369]: binary operation `+` cannot be applied to type `&'static str`
 --> src/test/ui/span/issue-39018.rs:2:13
  |
2 |     let x = "Hello " + "World!";
  |             ^^^^^^^^
  |
note: `+` can't be used to concatenate two `&str` strings
 --> src/test/ui/span/issue-39018.rs:2:13
  |
2 |     let x = "Hello " + "World!";
  |             ^^^^^^^^
help: to_owned() can be used to create an owned `String` from a string reference. This allows concatenation since the `String` is owned.
  |     let x = "Hello ".to_owned() + "World!";

error[E0369]: binary operation `+` cannot be applied to type `World`
 --> src/test/ui/span/issue-39018.rs:7:13
  |
7 |     let y = World::Hello + World::Goodbye;
  |             ^^^^^^^^^^^^
  |
note: an implementation of `std::ops::Add` might be missing for `World`
 --> src/test/ui/span/issue-39018.rs:7:13
  |
7 |     let y = World::Hello + World::Goodbye;
  |             ^^^^^^^^^^^^

error: aborting due to 2 previous errors

